fix: wrap scss calc variables with interpolated values (#2759)
* fix: wrap scss calc variables with interpolated values

* fix: revert type.scss in deprecated and component library to use previous non calc calculation as a temporary fix

--- a/site/src/components/NavigationBar/_styles.scss
+++ b/site/src/components/NavigationBar/_styles.scss
@@ -12,9 +12,9 @@ $ca-navigation-bar__animation-ease: cubic-bezier(0.55, 0.085, 0.68, 0.53);
 $ca-navigation-bar__animation-timing: 150ms;
 
 $ca-navigation-bar__link-item-indicator-height: 3px;
-$ca-navigation-bar__link-item-margin: calc($ca-grid / 4);
+$ca-navigation-bar__link-item-margin: calc(#{$ca-grid} / 4);
 
-$link-margin: calc($ca-grid / 4);
+$link-margin: calc(#{$ca-grid} / 4);
 
 @mixin ca-navigation-bar__link-item {
   @extend %ca-navigation-bar__menu-item-focus;
@@ -29,7 +29,7 @@ $link-margin: calc($ca-grid / 4);
   // fill parent
   display: flex;
   min-width: 2 * $ca-grid;
-  margin: calc($ca-grid / 4) 0;
+  margin: calc(#{$ca-grid} / 4) 0;
 
   // center child
   align-items: center;
@@ -101,7 +101,7 @@ $link-margin: calc($ca-grid / 4);
       @include ca-type-inter-body;
       @include ca-inherit-baseline;
 
-      padding: 0 calc($ca-grid / 2);
+      padding: 0 calc(#{$ca-grid} / 2);
 
       .linkIcon {
         @include ca-media-tablet {
